--- a/app/src/main/res/layout/activity_custom_keyboard.xml
+++ b/app/src/main/res/layout/activity_custom_keyboard.xml
@@ -19,7 +19,7 @@
             <TextView
                     android:text="12209,1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" android:id="@+id/textView16" android:textAlignment="center"
+                    android:layout_height="wrap_content" android:id="@+id/amountCK" android:textAlignment="center"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textView19" app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/textView16"
+                    android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/amountCK"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                     android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                     android:textColor="@android:color/black" android:textSize="36sp" android:textStyle="bold"
@@ -44,7 +44,7 @@
             android:inputType="numberPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/PinWidget.PinView" />
+            style="@style/PinWidget.PinView"/>
     <Button
             android:id="@+id/validate_button"
             android:layout_gravity="center"
