--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/spacing_large"
                 android:layout_marginBottom="@dimen/spacing_mlarge"
-                android:src="@drawable/logo_round"
+                android:src="@drawable/primepaylogo"
                 android:tint="@android:color/white" />
 
         <androidx.cardview.widget.CardView
