--- a/app/src/main/res/layout/activity_mobile_bill.xml
+++ b/app/src/main/res/layout/activity_mobile_bill.xml
@@ -93,13 +93,17 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" app:hintAnimationEnabled="false"
-                            app:hintEnabled="false" android:id="@+id/phoneNumberBP">
+                            android:layout_height="match_parent"
+                            app:hintAnimationEnabled="false"
+                            app:hintEnabled="false"
+                            android:id="@+id/phoneNumberLayoutBP">
 
                         <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/phoneNumberBP"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="@string/hint_phone_number" android:inputType="number"/>
+                                android:hint="@string/hint_phone_number"
+                                android:inputType="number"/>
                     </com.google.android.material.textfield.TextInputLayout>
                     <TextView
                             android:text="@string/amount"
@@ -109,13 +113,17 @@
                             android:textSize="18sp" android:textStyle="bold"/>
                     <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent" app:hintAnimationEnabled="false"
-                            app:hintEnabled="false" android:id="@+id/amountLayoutPB">
+                            android:layout_height="match_parent"
+                            app:hintAnimationEnabled="false"
+                            app:hintEnabled="false"
+                            android:id="@+id/amountLayoutPB">
 
                         <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/amountBP"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:hint="@string/amount" android:inputType="number"/>
+                                android:hint="@string/amount"
+                                android:inputType="number"/>
                     </com.google.android.material.textfield.TextInputLayout>
                     <TextView
                             android:layout_width="match_parent"
