--- a/app/src/main/res/layout/activity_dash.xml
+++ b/app/src/main/res/layout/activity_dash.xml
@@ -18,6 +18,7 @@
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
+                android:layoutDirection="locale"
                 android:layout_height="?attr/actionBarSize"
                 android:theme="@style/Widget.AppCompat.ActionMode"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
