--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,6 +60,7 @@
                         android:textStyle="bold"/>
 
                 <TextView
+                        android:id="@+id/usernameView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="USERNAME"
@@ -87,6 +88,7 @@
                         android:layout_height="@dimen/spacing_mlarge" />
 
                 <TextView
+                        android:id="@+id/passwordView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="PASSWORD"
